src/objects/Factura_item__c.object
<CustomObject>
    <fields>
        <fullName>Entregado__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Entregado?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factura__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Factura</label>
        <referenceTo>Factura__c</referenceTo>
        <relationshipLabel>Factura items</relationshipLabel>
        <relationshipName>Factura_items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fecha_entrega__c</fullName>
        <label>Fecha entrega</label>
        <type>Date</type>
    </fields>
    <label>Factura item</label>
    <nameField>
        <label>Item</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factura items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>